# pyspark_confluent_avro

./: .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
pyspark_confluent_avro/: confluent_read_write.py  schema_registry.py  spark_avro_serde.py  spark_kafka.py
tests/: conftest.py  test_confluent_read_write.py  test_confluent_spark.py  test_schema_registry.py  test_spark_avro.py
