[tool.poetry]
name = "pyspark-confluent-avro"
version = "0.1.0"
description = ""
authors = ["Alexandre Candeias <candeiasalexandre@gmail.com>"]
readme = "README.md"
packages = [{ include = "pyspark_confluent_avro" }]

[tool.poetry.dependencies]
python = "~3.8"
pyspark = "3.1.2"
confluent-kafka = "2.2.0"
requests = "2.31.0"
pandas = "1.2.4"
fastavro = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-repeat = "0.9.1"
black = "23.7.0"
ruff = "0.0.286"
mypy = "1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
